Fix overflow of the toggler menu

--- a/style.css
+++ b/style.css
@@ -230,7 +230,8 @@ pre code {
     width: 100%;
     height: 100%;
     visibility: hidden;
-    overflow: hidden;
+    overflow: scroll;
+    overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
